feat: add ExceptionHandler and deleteOperation
